src/ui/snapshots/grove__ui__sidebar__tests__collapsed_repo_hides_worktrees.snap
---
source: src/ui/sidebar.rs
expression: render_to_string(&app)
---
" PROJECTS                       "
" ────────────────────────────   "
"▸▶ grove                        "
"                                "
" ▼ dotfiles                     "
"   ○ main                       "
"   ● wip/zsh                    "
"                                "
" ────────────────────────────   "
" [a] Add repo                   "
" [w] New worktree               "
"                                "
" j/k  navigate                  "
" ?    help                      "
" q    quit                      "
"                                "
"                                "
"                                "
"                                "
"                                "
