src/ui/snapshots/grove__ui__sidebar__tests__empty_state_shows_add_hint.snap
---
source: src/ui/sidebar.rs
assertion_line: 121
expression: render_to_string(&app)
---
" PROJECTS                       "
" ────────────────────────────   "
"                                "
" No repositories configured.    "
"                                "
" Press [a] to add one.          "
"                                "
" ────────────────────────────   "
" [a] Add repo                   "
" [w] New worktree               "
"                                "
" j/k  navigate                  "
" ?    help                      "
" q    quit                      "
"                                "
"                                "
"                                "
"                                "
"                                "
"                                "
