src/ui/snapshots/grove__ui__sidebar__tests__long_branch_name_is_truncated_when_badges_present.snap
---
source: src/ui/sidebar.rs
expression: render_to_string(&app)
---
" PROJECTS                       "
" ────────────────────────────   "
"▸▼ grove                        "
"   ○ main                       "
"   ● feature/this-is-a-ve… +4 ↑2"
"   ● fix/deps                   "
"                                "
" ▼ dotfiles                     "
"   ○ main                       "
"   ● wip/zsh                    "
"                                "
" ────────────────────────────   "
" [a] Add repo                   "
" [w] New worktree               "
"                                "
" j/k  navigate                  "
" ?    help                      "
" q    quit                      "
"                                "
"                                "
