src/ui/snapshots/grove__ui__sidebar__tests__navigating_down_moves_highlight.snap
---
source: src/ui/sidebar.rs
expression: render_to_string(&app)
---
" PROJECTS                       "
" ────────────────────────────   "
" ▼ grove                        "
"   ○ main                       "
"▸  ● feat/sidebar               "
"   ● fix/deps                   "
"                                "
" ▼ dotfiles                     "
"   ○ main                       "
"   ● wip/zsh                    "
"                                "
" ────────────────────────────   "
" [a] Add repo                   "
" [w] New worktree               "
"                                "
" j/k  navigate                  "
" ?    help                      "
" q    quit                      "
"                                "
"                                "
