src/ui/snapshots/grove__ui__sidebar__tests__worktrees_with_statuses_show_badges.snap
---
source: src/ui/sidebar.rs
assertion_line: 212
expression: render_to_string(&app)
---
" PROJECTS                       "
" ────────────────────────────   "
"▸▼ grove                        "
"   ○ main                      ✓"
"   ● feat/sidebar          +4 ↑1"
"   ● fix/deps               ⚠ ~2"
"                                "
" ▼ dotfiles                     "
"   ○ main                      ✓"
"   ● wip/zsh               ↑1 ↓2"
"                                "
" ────────────────────────────   "
" [a] Add repo                   "
" [w] New worktree               "
"                                "
" j/k  navigate                  "
" ?    help                      "
" q    quit                      "
"                                "
"                                "
